Fix layout issues for experience and jobs

--- a/app/javascript/stylesheets/app/application.css
+++ b/app/javascript/stylesheets/app/application.css
@@ -170,7 +170,7 @@
     display: none;
     content: '';
     height: 15px;
-    left: -120px;
+    left: -95px;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
